# MechanicalProject

./: pyproject.toml
authentication/: urls.py
core/: asgi.py  permissions.py  settings.py  urls.py
customers/: admin.py  models.py  urls.py  views.py
customers/migrations/: 0001_initial.py  0002_alter_customer_user.py  0003_alter_customer_user.py
inflows/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
inflows/migrations/: 0001_initial.py  0002_alter_inflows_options.py
outflows/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
outflows/migrations/: 0001_initial.py  0002_alter_outflows_options.py
products/: admin.py  api_urls.py  apps.py  consumers.py  forms.py  models.py  serializers.py  signals.py  urls.py  views.py
products/migrations/: 0001_initial.py
services/: forms.py  models.py  urls.py  views.py
services/migrations/: 0001_initial.py
static/css/: style.css  style_product.css  style_robot.css  vehicle.css
static/javascript/: delete_product_type.js  mechanic.js
staticfiles/css/: style.css  style_product.css  vehicle.css
staticfiles/javascript/: mechanic.js  vehicle_queue.js  vehicle_websocket.js  websocket.js
supplier/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
supplier/migrations/: 0001_initial.py
templates/: base.html
templates/includes/: _footer.html  _header.html
templates/products/: create_product.html  create_product_type.html  list_products.html  (+3 more)
vehicles/: admin.py  api_urls.py  forms.py  models.py  serializers.py  urls.py  views.py
(+28 files in other folders)
